# langgraph-visualizer

./: .gitignore  CLAUDE.md  README.md  example_agent.py  pyproject.toml
backend/: diff.py  main.py  requirements.txt  storage.py
docs/: ARCHITECTURE.md  BACKLOG.md  IMPLEMENTATION_PLAN.md
docs/superpowers/specs/: 2026-06-25-frontend-redesign-design.md
frontend/: graph.js  index.html  inspector.js  main.js  panels.js  replay.js  state.js
langgraph_visualizer/: __init__.py  client.py  tracer.py
tests/: test_phase0.py  test_phase1.py  test_phase2.py
