[project]
name = "langgraph-visualizer"
version = "0.1.0"
description = "A lightweight, privacy-focused, local-first visualizer for LangGraph state machine executions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "websockets>=12.0",
]


[tool.uv]
package = false

